# spaceinvaders

./: .editorconfig  CMakeLists.txt  LICENSE  main.cxx  main.hxx
game/: aircraft.cxx  aircraft.hxx  object.hxx  world.cxx  world.hxx
game/bullet/: bullet.cxx  bullet.hxx
game/enemy/: boss.hxx  corbi.hxx  darbi.hxx  enemy.hxx  morbi.hxx
